[gd_scene load_steps=5 format=2]

[ext_resource path="res://Maps/Button.gd" type="Script" id=1]
[ext_resource path="res://Maps/blueCrystal.png" type="Texture" id=2]
[ext_resource path="res://Maps/redCrystal.png" type="Texture" id=3]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.5976, 16.6314 )

[node name="FireInjection" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 310.211, 111.913 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -113.707, 183.498 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 781.715, 182.205 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
